Changes
*******

6.2
~~~

* Issue #28: Fixed poor parsing of git version. Also provide a nicer error
  message when no repo manager is found.

6.1
~~~

* Issue #21: GitManager is now only valid if Git 1.7.10 or later is present.

6.0
~~~

* Issue #23: hgtools no longer imports Mercurial and thus does not link to
  it. Applications that wish to use the in-process Mercurial manager must
  first `import mercurial.dispatch` in their application.
* Issue #23: hgtools is now licensed under the MIT license.

5.3
~~~

* Issue #19: Add file finder support for git. Credit to Berry Phillips.

5.2
~~~

* Issue #20: Added support for listing all git tags. Credit to Berry Phillips.

5.1
~~~

* In version inference, always fallback to increment (or None) when an
  Exception occurs in the calculation.

5.0.1
~~~~~

* Issue #17: Fix regression on older versions of setuptools where unspecified
  distribution attributes would cause use_vcs_version of None to supersede
  a supplied use_hg_version.

5.0
~~~

* Added new ``use_vcs_version`` distutils parameter to supersede
  ``use_hg_version``. Clients should update to use this new parameter as soon
  as hgtools 5.0 is generally available.
* Initial git support. The tool now nominally supports eliciting the project
  version from a git tag. Many of the hg features are not yet implemented,
  such as auto-incrementing versions when the current revision is not on a
  tag and file discovery from repo metadata.
  This new Git support provides experimental support for dual-hosted
  repositories (such as those found on Kiln). Since file discovery is not yet
  tested or implemented, there are likely to be yet undiscovered issues.
* Refactored the Manager models to better support the two repositories.
  Clients that use hgtools to programmatically manipulate repositories will
  need to update to use the new names. In particular, HGRepoManager was
  renamed to RepoManager. SubprocessManager renamed to MercurialManager and