@@ -6,6 +6,7 @@ Changes
 
 * Issue #28: Fixed poor parsing of git version. Also provide a nicer error
   message when no repo manager is found.
+* Added support for querying the Mercurial version in cmd.Mercurial.
 
 6.1
 ~~~
